syntax = "proto3";

package io.prometer.products;

option go_package = "github.com/adfinitas-app/prometer/models/products";

message ProductModel {
  string id = 1;
  string title = 2;
  string description = 3;
}

message ProductRequest {
  string productId = 1;
}
message ProductsRequest {
  repeated string productIds = 1;
}

message ProductResponse {
  ProductModel products = 1;
}
message ProductsResponse {
  repeated ProductModel products = 1;
}

service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse) {}
  rpc GetProducts(ProductsRequest) returns (ProductsResponse) {}
}
